# exercism

./: Cargo.toml
anagram/src/: main.rs
assembly_line/src/: main.rs
clock/src/: main.rs
embedded_game/: Cargo.toml
embedded_game/src/: main.rs
fibonacci/src/: main.rs
giga_second/src/: main.rs
health_statistics/src/: main.rs
hello_world/src/: main.rs
lasagna/src/: main.rs
luhn/src/: main.rs
magazine_cutout/src/: main.rs
minesweeper/src/: main.rs
poker/src/: main.rs
resistor/: Cargo.toml
resistor/src/: main.rs
reverse_str/: Cargo.toml
reverse_str/src/: main.rs
role_game/: Cargo.toml
role_game/src/: main.rs
rpn_calc/src/: main.rs
semi_logs/: Cargo.toml
semi_logs/src/: main.rs
space_age/src/: main.rs
sublist/src/: main.rs
