[workspace]
members=[
    "hello_world",
    "lasagna",
    "magazine_cutout",
    "assembly_line",
    "semi_logs",
    "resistor",
    "health_statistics",
    "role_game",
    "embedded_game",
    "fibonacci",
    "rpn_calc",
    "reverse_str",
    "giga_second",
    "clock"
]
default-members=["clock"]